--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^27.0.0",
     "svg-spritemap-webpack-plugin": "^4.5.0",
+    "vanillajs-datepicker": "^1.3.3",
     "webp-converter": "^2.2.3",
     "webpack": "^5.72.0",
     "webpack-stream": "^7.0.0"
